--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "homepage": "https://github.com/nncis/nncis.github.io"
+
   },
   "scripts": {
     "start": "react-scripts start",
